--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "main": "./backend/index.js",
+  "main": "./backend/server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon ./backend/index.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./backend/server.js",
+    "start": "node ./backend/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "puppeteer": "^19.3.0"
   },
   "devDependencies": {
@@ -14,5 +15,10 @@
     "@types/node": "^18.11.10",
     "@types/puppeteer": "^7.0.4",
     "nodemon": "^2.0.20"
-  }
+  },
+  "author": "Jadin Heaston",
+  "license": "GNU GPL v3",
+  "maintainers": ["Jadin Heaston"],
+  "private": true,
+  "repository": {"GitHub":"https://github.com/JadinHeaston/F-ESS"}
 }
