- Formatting CSS documents. - Changing hover color of change-status button. - Added functional Docker configuration. - Expanded documentation. - Added very basic error handling for server-killing errors. - Began adding. - Optimized a few client JS functions to be asynchronous. - Added a lot of documentation, including a todo list.
Signed-off-by: Jadin Heaston <jadin.heaston@como.gov>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
 services:
-  f-ess:
+  fess-app:
     build: .
     command: npm run dev
-    ports: 
+    container_name: fess
+    healthcheck:
+      test: "wget --no-verbose --tries=1 --spider http://localhost || exit 1"
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+    init: true
+    ports:
       - "80:80"
+    restart: unless-stopped
+    security_opt: 
+      - seccomp=chrome.json
+    user: "fessuser:fessuser"
     volumes:
       - .:/usr/app/
