--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,33 @@
 services:
   fess-app:
-    build: .
-    command: npm run dev
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - timezone=${TIMEZONE:-"America/Chicago"}
+        - port=${PORT:-80}
+    command: npm run ${MODE:-DEV}
     container_name: fess
+    environment:
+      - LOGIN_PAGE=${login_page}
+      - PORT=${PORT:-80}
+      - SESSION_SECRET=${session_secret}
     healthcheck:
-      test: "wget --no-verbose --tries=1 --spider http://localhost || exit 1"
+      test: "wget --no-verbose --tries=1 --spider http://localhost:${PORT:-80} || exit 1"
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 15s
     init: true
     ports:
-      - "80:80"
+      - "${PORT:-80}:${PORT:-80}"
     restart: unless-stopped
     security_opt: 
       - seccomp=chrome.json
     user: "fessuser:fessuser"
     volumes:
+      - fess-sessions:/usr/app/backend/sessions/
       - .:/usr/app/
+volumes:
+    fess-sessions:
+        external: false
