--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./backend/server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "puppeteer": "^19.3.0"
+    "puppeteer": "^19.3.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -18,7 +20,11 @@
   },
   "author": "Jadin Heaston",
   "license": "GNU GPL v3",
-  "maintainers": ["Jadin Heaston"],
+  "maintainers": [
+    "Jadin Heaston"
+  ],
   "private": true,
-  "repository": {"GitHub":"https://github.com/JadinHeaston/F-ESS"}
+  "repository": {
+    "GitHub": "https://github.com/JadinHeaston/F-ESS"
+  }
 }
