--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./backend/server.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
