TONS of work here. :) Known issue: The timezone is still not being set properly within Docker containers.
* Added full Docker Compose support.
* Moved interfaces to separate files.
* Added light documentation files.
* Added user-agent workaround for ExecuTime blocking.
* Added styled login area.
* Fixed sessions not being saved properly.
* Added better error checking.
* Added front-end time accumulation area.
* Facilitated back-end for time accumulation.
* Optimized loading and asynchronous stuff.
* Moved to fetch() instead of XHTML
* Fixed blocking certain requests within Puppeteer. Responses by requests sent by Puppeteer with JS were getting blocked.

Signed-off-by: Jadin Heaston <86203688+JadinHeaston@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - timezone=${TIMEZONE:-"America/Chicago"}
+        - timezone=${TIMEZONE:-America/Chicago}
         - port=${PORT:-80}
     command: npm run ${MODE:-DEV}
     container_name: fess
@@ -12,6 +12,7 @@ services:
       - LOGIN_PAGE=${login_page}
       - PORT=${PORT:-80}
       - SESSION_SECRET=${session_secret}
+      - USER_AGENT=${user_agent}
     healthcheck:
       test: "wget --no-verbose --tries=1 --spider http://localhost:${PORT:-80} || exit 1"
       interval: 30s
