--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
 	},
     "include": [
         "./**/*.ts"
-, "backend/server.js", "backend/server.js"    ],
+		, "backend/server.js", "backend/server.js"
+	],
 }
