--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,6 @@
 LOGIN_PAGE=""
+MODE="dev"
+USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36 Edg/108.0.1462.54"
+PORT="80"
 SESSION_SECRET=""
 TIMEZONE="America/Chicago"
-PORT="80"
-MODE="dev"
