Fixing timezone issue.
The issue was not with the Dockerfile configuration. It was due to Puppeteer not having the correct timezone.

Signed-off-by: Jadin Heaston <jadin.heaston@como.gov>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     command: npm run ${MODE:-DEV}
     container_name: fess
     environment:
+      - TIMEZONE=${TIMEZONE:-America/Chicago}
       - LOGIN_PAGE=${login_page}
       - PORT=${PORT:-80}
       - SESSION_SECRET=${session_secret}
