--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./backend/server.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
